# bring-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  INSTALL_MACOS.md  QUICKFIX.md  QUICKSTART.md  README.md  VENV_SETUP.md  bring_server_standalone.py  check_install.sh  deploy.sh  pyproject.toml  pytest.ini  requirements.txt  run_bring_server.sh  setup.sh  setup_venv.sh
src/bring_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_server.py
