[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bring-mcp-server"
version = "0.1.0"
description = "MCP server for Bring! Shopping Lists API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Marco", email = "your-email@example.com" }
]
keywords = ["mcp", "bring", "shopping", "list", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=0.9.0",
    "bring-api>=1.1.1",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bring-mcp-server"
Repository = "https://github.com/yourusername/bring-mcp-server"
Documentation = "https://github.com/yourusername/bring-mcp-server#readme"
Issues = "https://github.com/yourusername/bring-mcp-server/issues"

[project.scripts]
bring-mcp-server = "bring_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
